force-app/main/default/objects/Referencia_Comercial__c/fields/Area_conocimiento_tecno__c.field-meta.xml
<CustomField>
    <fullName>Area_conocimiento_tecno__c</fullName>
    <label>Área Conocimiento Tecnológica</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP-Administración electrónica</fullName>
            </value>
            <value>
                <fullName>AP-Smart Cities</fullName>
            </value>
            <value>
                <fullName>COE-CIBERSEGURIDAD</fullName>
            </value>
            <value>
                <fullName>COE-CIBERSEGURIDAD AUDITORIAS IT/OT</fullName>
            </value>
            <value>
                <fullName>COE-CIBERSEGURIDAD COMPLIANCE</fullName>
            </value>
            <value>
                <fullName>COE-CIBERSEGURIDAD FORMACIÓN CIBER</fullName>
            </value>
            <value>
                <fullName>COE-CIBERSEGURIDAD MSSP SOC/CERT</fullName>
            </value>
            <value>
                <fullName>COE-CIBERSEGURIDAD SECURITY RESSELING</fullName>
            </value>
            <value>
                <fullName>COE-Hybrid IT / Cloud Computing</fullName>
            </value>
            <value>
                <fullName>COE-Microsoft</fullName>
            </value>
            <value>
                <fullName>COE-Salesforce</fullName>
            </value>
            <value>
                <fullName>COE-SAP</fullName>
            </value>
            <value>
                <fullName>COE-SAP Ariba</fullName>
            </value>
            <value>
                <fullName>COE-SAP C4</fullName>
            </value>
            <value>
                <fullName>COE-SAP Concur</fullName>
            </value>
            <value>
                <fullName>COE-SAP Group Reporting</fullName>
            </value>
            <value>
                <fullName>COE-SAP RPA</fullName>
            </value>
            <value>
                <fullName>COE-SAP SAC</fullName>
            </value>
            <value>
                <fullName>COE-SAP SLCM</fullName>
            </value>
            <value>
                <fullName>COE-SAP SSFF</fullName>
            </value>
            <value>
                <fullName>COE-SAP Vistex</fullName>
            </value>
            <value>
                <fullName>COE-Smart Factory &amp; OT</fullName>
            </value>
            <value>
                <fullName>DIG-+DevOps / Agile</fullName>
            </value>
            <value>
                <fullName>DIG-BLOCKCHAIN</fullName>
            </value>
            <value>
                <fullName>DIG-DATA-Analytics-Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>DIG-DX Digital Experience</fullName>
            </value>
            <value>
                <fullName>DIG-Gestión documental</fullName>
            </value>
            <value>
                <fullName>DIG-HCM-Personas</fullName>
            </value>
            <value>
                <fullName>DIG-IBERDOK</fullName>
            </value>
            <value>
                <fullName>DIG-Learning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>