force-app/main/default/objects/Referencia_Comercial__c/fields/Area_Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Area_Tecnologia__c</fullName>
    <label>Área Tecnología</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Tecnologia_Lista</valueSetName>
    </valueSet>
</CustomField>