force-app/main/default/objects/Referencia_Comercial__c/fields/Buscador_Area_Conocimiento_Tecnologica__c.field-meta.xml
<CustomField>
    <fullName>Buscador_Area_Conocimiento_Tecnologica__c</fullName>
    <label>Buscador Area Conocimiento Tecnologica</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>