force-app/main/default/objects/Referencia_Comercial__c/fields/CPV_varios__c.field-meta.xml
<CustomField>
    <fullName>CPV_varios__c</fullName>
    <label>CPV varios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>