force-app/main/default/objects/Referencia_Comercial__c/fields/Nombre_largo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_largo__c</fullName>
    <label>Nombre largo</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>